@@ -1,9 +1,7 @@
 package com.trip.tripshorts.config;
 
 
-import com.trip.tripshorts.auth.service.JwtAuthenticationFilter;
-import com.trip.tripshorts.auth.service.OAuth2AuthenticationSuccessHandler;
-import com.trip.tripshorts.auth.service.OAuth2UserService;
+import com.trip.tripshorts.auth.JwtAuthenticationFilter;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -13,6 +11,7 @@ import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -20,8 +19,6 @@ import java.util.List;
 @RequiredArgsConstructor
 public class SecurityConfig {
 
-    private final OAuth2UserService oAuth2UserService;
-    private final OAuth2AuthenticationSuccessHandler oAuth2AuthenticationSuccessHandler;
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
 
     @Bean
@@ -30,7 +27,7 @@ public class SecurityConfig {
                 .cors(cors -> cors
                         .configurationSource(request -> {
                             var corsConfiguration = new org.springframework.web.cors.CorsConfiguration();
-                            corsConfiguration.setAllowedOrigins(List.of("*"));
+                            corsConfiguration.setAllowedOrigins(Arrays.asList("https://d3sspkhgtlkiph.cloudfront.net", "http://localhost:5173"));
                             corsConfiguration.setAllowedMethods(List.of("*"));
                             corsConfiguration.setAllowedHeaders(List.of("*"));
                             return corsConfiguration.applyPermitDefaultValues();
@@ -39,13 +36,8 @@ public class SecurityConfig {
                 .sessionManagement(session ->
                         session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> {
+                    // TODO : 나중에 수정 필요
                     auth.anyRequest().permitAll();
-                })
-                .oauth2Login(oauth2 -> {
-                    oauth2
-                            .userInfoEndpoint(userInfo ->
-                                    userInfo.userService(oAuth2UserService))
-                            .successHandler(oAuth2AuthenticationSuccessHandler);
                 })
                 .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
